fix timeline spacing bullshit

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -326,7 +326,7 @@
   .timeline {
     --timeline-icon-size: 62px;
     --timeline-icon-event-gap: var(--space-8);
-    --timeline-axis-gap: 80px;
+    --timeline-axis-gap: 96px;
     --timeline-axis-bridge: calc(var(--timeline-axis-gap) / 2);
     height: 125vh;
     min-height: 125vh;
@@ -366,13 +366,13 @@
 
   .timeline__detail {
     min-height: var(--timeline-icon-size);
-    margin-left: var(--space-20);
+    margin-left: var(--space-24);
   }
 
   .timeline__time {
     font-size: var(--text-date-role);
     line-height: 1.3;
-    padding-right: var(--space-20);
+    padding-right: var(--space-24);
     text-align: right;
   }
 
@@ -751,7 +751,7 @@
   .timeline {
     --timeline-icon-size: 72px;
     --timeline-icon-event-gap: var(--space-8);
-    --timeline-axis-gap: 104px;
+    --timeline-axis-gap: 124px;
     --timeline-axis-bridge: calc(var(--timeline-axis-gap) / 2);
     height: 125vh;
     min-height: 125vh;
@@ -791,13 +791,13 @@
 
   .timeline__detail {
     min-height: var(--timeline-icon-size);
-    margin-left: var(--space-24);
+    margin-left: var(--space-28);
   }
 
   .timeline__time {
     font-size: var(--text-date-role);
     line-height: 1.3;
-    padding-right: var(--space-24);
+    padding-right: var(--space-28);
     text-align: right;
   }
 
@@ -978,7 +978,7 @@
   .timeline {
     --timeline-icon-size: 48px;
     --timeline-icon-event-gap: var(--space-4);
-    --timeline-axis-gap: 60px;
+    --timeline-axis-gap: 76px;
     --timeline-axis-bridge: calc(var(--timeline-axis-gap) / 2);
   }
 
@@ -1000,7 +1000,7 @@
 
   .timeline__detail {
     min-height: var(--timeline-icon-size);
-    margin-left: var(--space-16);
+    margin-left: var(--space-20);
   }
 
   .timeline__event {
@@ -1008,7 +1008,7 @@
   }
 
   .timeline__time {
-    padding-right: var(--space-16);
+    padding-right: var(--space-20);
     text-align: right;
   }
 
@@ -1040,7 +1040,7 @@
 /* Extra-narrow phones: keep timeline text clear of center axis. */
 @media only screen and (max-width: 390px) {
   .timeline {
-    --timeline-axis-gap: 72px;
+    --timeline-axis-gap: 92px;
     --timeline-axis-bridge: calc(var(--timeline-axis-gap) / 2);
   }
 
@@ -1059,11 +1059,11 @@
   }
 
   .timeline__detail {
-    margin-left: var(--space-20);
+    margin-left: var(--space-24);
   }
 
   .timeline__time {
-    padding-right: var(--space-20);
+    padding-right: var(--space-24);
     text-align: right;
     max-width: 12ch;
     overflow-wrap: anywhere;
